--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ serde = { version = "1.0", features = ["derive"] }
 
 # MAYBE: Switch to maintained saphyr crate?
 serde_yaml = "0.9.34"
+
+
+[profile.release]
+strip = true
+opt-level = "z"
